--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Aldrich&display=swap" rel="stylesheet">
     <!-- My own stylesheet -->
     <link rel="stylesheet" href="./css.css">
-    
+    <link rel="shortcut icon" type="image/png" href="./logo.png">
 </head>
 <body>
     <!-- <a href=""><img class="logo" src="./My-logo-white - singup.png" alt=""></a> -->
