--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="container">
                 <div class="testimonial">
                     <div class="testimonial-text-box">
-                        <p>Creat by:</p>
+                        <p>Created by:</p>
                         <i class="icon ion-md-quote"></i>
                     </div>
                     <div class="testimonial-customer">
@@ -121,7 +121,7 @@
             <div class="container">
                 <div class="title-heading">
                     <h3>Let The fun</h3>
-                    <h1>Start begin</h1>
+                    <h1> begin</h1>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="adventure-grid">
