--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
 <footer>
     &copy; 2020 Nomelae. All rights reserved.
 </footer>
+<div class="loader-wrapper">
+<div class="loader">Loading</div>
+</div>
     <script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
