--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Nomel</title>
+    <title>NOMELAE</title>
     <!-- Ion Icons -->
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -36,10 +36,10 @@
                         <i class="icon ion-md-close"></i>
                     </div>
                     <li class="nav-item">
-                        <a href="#" class="nav-link current">Home</a>
+                        <a href="./index.html" class="nav-link current">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Customers</a>
+                        <a href="./customers.html" class="nav-link">Customers</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Best Designes</a>
