--- a/customers.html
+++ b/customers.html
@@ -60,9 +60,9 @@
           <div class="card">
             <div class="card__side card__side--front" id="front-1">
               <div class="text-box">
-                <h3 class="text-box-top">Flipping Cards</h3>
+                <h3 class="text-box-top"></h3>
                 <h1 class="text-box-middle">Awesome!</h1>
-                <h3 class="text-box-lower">--- More Text ---</h3>
+                <h3 class="text-box-lower">--- view more ---</h3>
               </div>
             </div>
           </div>
@@ -71,9 +71,9 @@
           <div class="card">
             <div class="card__side card__side--front" id="front-2">
               <div class="text-box">
-                <h3 class="text-box-top">Flipping Cards</h3>
+                <h3 class="text-box-top"></h3>
                 <h1 class="text-box-middle">Awesome!</h1>
-                <h3 class="text-box-lower">--- More Text ---</h3>
+                <h3 class="text-box-lower">--- view more ---</h3>
               </div>
             </div>
           </div>
@@ -82,9 +82,9 @@
           <div class="card">
             <div class="card__side card__side--front" id="front-3">
               <div class="text-box">
-                <h3 class="text-box-top">Flipping Cards</h3>
+                <h3 class="text-box-top"></h3>
                 <h1 class="text-box-middle">Awesome!</h1>
-                <h3 class="text-box-lower">--- More Text ---</h3>
+                <h3 class="text-box-lower">--- view more ---</h3>
               </div>
             </div>
           </div>
@@ -93,7 +93,7 @@
           <div class="card">
             <div class="card__side card__side--front" id="front-4">
               <div class="text-box">
-                <h3 class="text-box-top">Flipping Cards</h3>
+                <h3 class="text-box-top"></h3>
                 <h1 class="text-box-middle">Awesome!</h1>
                 <h3 class="text-box-lower">--- More Text ---</h3>
               </div>
@@ -104,7 +104,7 @@
           <div class="card">
             <div class="card__side card__side--front" id="front-5">
               <div class="text-box">
-                <h3 class="text-box-top">Flipping Cards</h3>
+                <h3 class="text-box-top"></h3>
                 <h1 class="text-box-middle">Awesome!</h1>
                 <h3 class="text-box-lower">--- More Text ---</h3>
               </div>
@@ -115,7 +115,7 @@
           <div class="card">
             <div class="card__side card__side--front" id="front-6">
               <div class="text-box">
-                <h3 class="text-box-top">Flipping Cards</h3>
+                <h3 class="text-box-top"></h3>
                 <h1 class="text-box-middle">Awesome!</h1>
                 <h3 class="text-box-lower">--- More Text ---</h3>
               </div>
@@ -126,9 +126,9 @@
           <div class="card">
             <div class="card__side card__side--front" id="front-7">
               <div class="text-box">
-                <h3 class="text-box-top">Flipping Cards</h3>
+                <h3 class="text-box-top"></h3>
                 <h1 class="text-box-middle">Awesome!</h1>
-                <h3 class="text-box-lower">--- More Text ---</h3>
+                <h3 class="text-box-lower">--- view more ---</h3>
               </div>
             </div>
           </div>
