--- a/customers.html
+++ b/customers.html
@@ -53,6 +53,68 @@
             </div>
         </div>
     </header>
+
+    <!-- Stats cust -->
+
+    <!-- #1 -->
+    <div class="containerr">
+        <div class="story">
+          <div class="story-svg-img-wrapper">
+            <svg>
+              <defs>
+                <linearGradient id="insta-gradient">
+                  <stop offset="5%" stop-color="#00ff72" />
+                  <stop offset="95%" stop-color="#00ffaa" />
+                </linearGradient>
+              </defs>
+              <circle cx="50%" cy="50%" r="33"></circle>
+            </svg>
+            <img
+              src="./images/Grapics.jpg"
+              alt=""
+            />
+          </div>
+          <p>Waq</p>
+        </div>
+        <div class="story1">
+            <div class="story-svg-img-wrapper1">
+              <svg>
+                <defs>
+                  <linearGradient id="insta-gradient1">
+                    <stop offset="5%" stop-color="#00ff72" />
+                    <stop offset="95%" stop-color="#00ffaa" />
+                  </linearGradient>
+                </defs>
+                <circle cx="50%" cy="50%" r="33"></circle>
+              </svg>
+              <img
+                src="./images/Grapics.jpg"
+                alt=""
+              />
+            </div>
+            <p>Waq</p>
+          </div>
+          <div class="story2">
+            <div class="story-svg-img-wrapper2">
+              <svg>
+                <defs>
+                  <linearGradient id="insta-gradient2">
+                    <stop offset="5%" stop-color="#00ff72" />
+                    <stop offset="95%" stop-color="#00ffaa" />
+                  </linearGradient>
+                </defs>
+                <circle cx="50%" cy="50%" r="33"></circle>
+              </svg>
+              <img
+                src="./images/Grapics.jpg"
+                alt=""
+              />
+            </div>
+            <p>Waq</p>
+          </div>
+      </div>
+
+      
     
 <!-- Designes Cards -->
     <div class="grids">
