--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
         </section>
     </main>
 <footer>
-    &copy; 2020 Nomelae. All rights reserved.
+    <span>NOMELAE</span>
+    &copy; 2020. All rights reserved.
 </footer>
 
     <script type="text/javascript" src="./script.js"></script>
